# System-Monitor

./: Cargo.toml  Makefile  README.md  README_MODULES.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  widget_backup.rs
