[package]
name = "monitor_app"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14.0", features = ["wgpu", "tokio", "advanced", "canvas"] }
sysinfo = "0.37.2"

[package.metadata.bundle]
identifier = "com.example.monitor-app"
name = "System Monitor"
# icon = "resources/AppIcon.icns"